Split building functionality into a buildSrc folder